commons-configuration:1.10, reduce test/logging noise, address deprecations (#14)